phase_7/k8s/istio/destinationrules.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: analytics-destination-rule
  namespace: anime-api
spec:
  host: analytics.anime-api.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: recommendations-destination-rule
  namespace: anime-api
spec:
  host: recommendations.anime-api.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
